[package]
name = "minesweeper_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", features = ["gif"] }
clap = { version = "4.1.8", features = ["derive"] }
ureq = "2.6.2"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
gif = "0.12.0"